--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title>React To Do List</title>
-    <link rel="stylesheet" href="../src/style.css">
+    <link type="text/css" href="../src/style.css">
   </head>
   <body>
     <div id="root"></div>
-    <script src="../src/index.js"></script>
+    <script type="text/babel" src="../src/index.js"></script>
   </body>
 </html>
