--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
 <html>
   <head>
-    <title>React To Do List</title>
-    <link type="text/css" href="../src/style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="root"></div>
-    <script type="text/babel" src="../src/index.js"></script>
+    <script src="index.pack.js"></script>
   </body>
 </html>
